refactor : reponse 필드 변경
- keyword의 name필드 추가